--- a/package.json
+++ b/package.json
@@ -9,12 +9,14 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@tamagui/config": "^1.125.34",
     "axios": "^1.8.1",
     "expo": "~52.0.37",
     "expo-router": "^4.0.17",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "tamagui": "^1.125.34"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
