update tab bar icons

--- a/package.json
+++ b/package.json
@@ -11,11 +11,13 @@
   "dependencies": {
     "@tamagui/config": "^1.125.34",
     "axios": "^1.8.1",
-    "expo": "~52.0.37",
-    "expo-router": "^4.0.17",
+    "expo": "~52.0.46",
+    "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
+    "lucide-react-native": "^0.488.0",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
+    "react-native-svg": "^15.8.0",
     "tamagui": "^1.125.34"
   },
   "devDependencies": {
