--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "expo": "~52.0.46",
     "expo-router": "^4.0.20",
     "expo-status-bar": "~2.0.1",
+    "firebase": "^11.6.1",
     "lucide-react-native": "^0.488.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
