--- a/package.json
+++ b/package.json
@@ -9,23 +9,27 @@
     "web": "expo start --web"
   },
   "dependencies": {
-    "@tamagui/config": "^1.125.34",
+    "@tamagui/config": "^1.126.13",
+    "@tamagui/core": "^1.126.13",
+    "@tamagui/web": "^1.126.14",
     "axios": "^1.8.1",
-    "expo": "~52.0.46",
-    "expo-router": "^4.0.20",
-    "expo-status-bar": "~2.0.1",
-    "firebase": "^11.6.1",
-    "lucide-react-native": "^0.488.0",
-    "react": "18.3.1",
-    "react-native": "0.76.9",
-    "react-native-svg": "^15.8.0",
+    "expo": "~53.0.0",
+    "expo-linking": "~7.1.5",
+    "expo-router": "~5.0.7",
+    "expo-status-bar": "~2.2.3",
+    "lucide-react-native": "^0.511.0",
+    "react": "19.0.0",
+    "react-native": "0.79.2",
+    "react-native-safe-area-context": "^5.4.0",
+    "react-native-screens": "^4.11.1",
+    "react-native-svg": "15.11.2",
     "tamagui": "^1.125.34"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
-    "@types/react": "~18.3.12",
+    "@types/react": "~19.0.10",
     "dotenv": "^16.4.7",
-    "typescript": "^5.3.3"
+    "typescript": "^5.8.3"
   },
   "private": true
 }
